src/test/ui/parser/keyword-final.stderr
error: expected identifier, found reserved keyword `final`
  --> $DIR/keyword-final.rs:2:9
   |
LL |     let final = ();
   |         ^^^^^ expected identifier, found reserved keyword
   |
help: escape `final` to use it as an identifier
   |
LL |     let r#final = ();
   |         ++

error: aborting due to previous error

